Feat: footer 파일 수정_#25

--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -47,8 +47,8 @@
               </div>
             </div>
             <ul class="customer-service-contacts">
-              <li>비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></li>
-              <li>비회원 대량주문 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a></li>
+              비회원 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a>
+              <br>비회원 대량주문 문의 : <a href="mailto:help@karlycorp.com">help@karlycorp.com</a>
             </ul>
           </div>
           <div class="company-info">
