--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -15,7 +15,7 @@
           <p>지금 가입하고 인기상품 <span>100원</span>에 받아가세요!</p>
         </a>
           <button class="Top_banner_Close" type="button">
-            <img src="../../assets/icon/ico_close_fff_82x82 1.png" alt="최상단 배너 닫기 버튼" />
+            <img src="../../assets/icon/ico_close_fff_82x82.png" alt="최상단 배너 닫기 버튼" />
           </button>
         </div>
       </div>
