--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,11 +1,11 @@
-/* Reset some default styles */
+
 body, h2, p, ul, li, span {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Container and general layout */
+
 .footer-container {
   display: flex;
   flex-direction: column;
@@ -42,12 +42,12 @@ body, h2, p, ul, li, span {
   margin-bottom: 20px;
 }
 
-/* Customer Service Section */
+
 .customer-service-title {
   color: var(--content, #333);
   font-size: 21.328px;
   font-weight: 700;
-  line-height: 140%; /* 29.859px */
+  line-height: 140%; 
 }
 
 .customer-service-phone {
@@ -57,8 +57,7 @@ body, h2, p, ul, li, span {
 }
 
 .phone-number {
-  color: #fff;
-  background-color: #000;  /* Set background color to black */
+  color: black;
   padding: 10px 20px;
   border-radius: 5px;
   text-align: center;
@@ -107,14 +106,14 @@ body, h2, p, ul, li, span {
 .footer_cs_list li {
   color: var(--content, #333);
   font-size: 12px;
-  line-height: 160%; /* 19.205px */
+  line-height: 160%; 
 }
 
 .footer_cs_list li a {
   color: var(--primary, #007bff);
 }
 
-/* Company Info Section */
+
 .company-menu {
   display: flex;
   flex-wrap: wrap;
@@ -153,7 +152,7 @@ body, h2, p, ul, li, span {
   padding-left: 17px;
   color: var(--content, #333);
   font-size: 12px;
-  line-height: 160%; /* 19.205px */
+  line-height: 160%; 
 }
 
 .company-address li::before {
@@ -175,7 +174,7 @@ body, h2, p, ul, li, span {
   text-decoration: underline;
 }
 
-/* Social Links Section */
+
 .social-links {
   display: flex;
   justify-content: space-around;
@@ -190,7 +189,7 @@ body, h2, p, ul, li, span {
   height: 24px;
 }
 
-/* Certifications Section */
+
 .certifications {
   display: flex;
   justify-content: space-between;
@@ -225,7 +224,7 @@ body, h2, p, ul, li, span {
   white-space: nowrap;
 }
 
-/* Footer Disclaimer */
+
 .disclaimer-text p {
   font-size: 14px;
   color: var(--content, #777);
@@ -237,7 +236,7 @@ body, h2, p, ul, li, span {
   color: var(--gray--400, #bbb);
 }
 
-/* Responsive Design */
+
 @media (max-width: 768px) {
   .footer-content {
       flex-direction: column;
