--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 /* 상단 Top_banner 최상단 */
 .Top_banner {
   background: var(--primary, #5f0080);
-  width: 100vw; /* 뷰포트 전체 너비 */
+  width: 100vw; 
   height: 50px;
   font-size: 16px;
   font-weight: 400;
@@ -13,22 +13,22 @@
 .Top_banner_Inner {
   
   width: 1050px;
-  margin: 0 auto; /* 가운데 정렬 */
+  margin: 0 auto; 
   display: flex;
-  justify-content: space-between; /* p 태그와 닫기 버튼을 최대한 오른쪽과 왼쪽으로 분리 */
-  align-items: center; /* 세로 가운데 정렬 */
+  justify-content: space-between; 
+  align-items: center; 
 }
 
 .Top_banner p {
   margin: 0;
-  cursor: pointer; /* 마우스를 올렸을 때 포인터 커서로 변경 */
+  cursor: pointer; 
   
 }
 
 .Top_banner_Close {
   width: 42px;
   height: 42px;
-  cursor: pointer; /* 마우스를 올렸을 때 포인터 커서로 변경 */
+  cursor: pointer; 
 }
 
 .Top_banner span {
