--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,8 @@
-
 body, h2, p, ul, li, span {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 
 .footer-container {
   display: flex;
@@ -29,7 +27,7 @@ body, h2, p, ul, li, span {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 1050px;
+  
   padding: 20px;
   text-align: center;
 }
@@ -41,7 +39,6 @@ body, h2, p, ul, li, span {
 .customer-service-title, .customer-service-phone, .company-menu, .company-address, .customer-service-contacts, .social-links, .certifications, .disclaimer-text, .copyright-text {
   margin-bottom: 20px;
 }
-
 
 .customer-service-title {
   color: var(--content, #333);
@@ -69,7 +66,11 @@ body, h2, p, ul, li, span {
   color: var(--content, #333);
   font-size: 16px;
   font-weight: 600;
-  line-height: 150%; /* 24px */
+  line-height: 150%;
+}
+
+.customer-service-contacts a {
+  color: var(--content, #5F0080);
 }
 
 .customer-service-info .info-section {
@@ -96,7 +97,7 @@ body, h2, p, ul, li, span {
   margin-left: 10px;
   color: var(--content, #333);
   font-size: 16px;
-  line-height: 160%; /* 25.6px */
+  line-height: 160%;
 }
 
 .info-details span {
@@ -106,13 +107,12 @@ body, h2, p, ul, li, span {
 .footer_cs_list li {
   color: var(--content, #333);
   font-size: 12px;
-  line-height: 160%; 
+  line-height: 160%;
 }
 
 .footer_cs_list li a {
   color: var(--primary, #007bff);
 }
-
 
 .company-menu {
   display: flex;
@@ -124,7 +124,7 @@ body, h2, p, ul, li, span {
   list-style: none;
   color: var(--content, #333);
   font-size: 16px;
-  line-height: 160%; /* 25.6px */
+  line-height: 160%;
 }
 
 .company-menu a {
@@ -145,6 +145,7 @@ body, h2, p, ul, li, span {
   display: flex;
   flex-wrap: wrap;
   margin-left: -17px;
+  list-style-type: none;
 }
 
 .company-address li {
@@ -152,7 +153,7 @@ body, h2, p, ul, li, span {
   padding-left: 17px;
   color: var(--content, #333);
   font-size: 12px;
-  line-height: 160%; 
+  line-height: 160%;
 }
 
 .company-address li::before {
@@ -167,17 +168,18 @@ body, h2, p, ul, li, span {
 }
 
 .company-address a {
-  color: var(--primary, #007bff);
+  color: var(--primary, #5F0080);
 }
 
 .company-address a:hover {
   text-decoration: underline;
 }
 
-
 .social-links {
   display: flex;
-  justify-content: space-around;
+  align-items: flex-start;
+  gap: 12px;
+  
 }
 
 .social-links li {
@@ -185,10 +187,11 @@ body, h2, p, ul, li, span {
 }
 
 .social-links img {
-  width: 24px;
-  height: 24px;
+  
+ 
+  height: 30px;
+  
 }
-
 
 .certifications {
   display: flex;
@@ -216,14 +219,13 @@ body, h2, p, ul, li, span {
 .certifications figcaption {
   font-size: 10px;
   color: var(--content, #777);
-  line-height: 160%; /* 16px */
+  line-height: 160%;
 }
 
 .certifications figcaption span {
   display: block;
   white-space: nowrap;
 }
-
 
 .disclaimer-text p {
   font-size: 14px;
@@ -236,27 +238,26 @@ body, h2, p, ul, li, span {
   color: var(--gray--400, #bbb);
 }
 
-
 @media (max-width: 768px) {
   .footer-content {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .customer-service, .company-info {
-      width: 100%;
+    width: 100%;
   }
 
   .company-menu {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .company-menu li {
-      margin-bottom: 10px;
+    margin-bottom: 10px;
   }
 
   .social-links {
-      justify-content: center;
+    justify-content: center;
   }
 }
