--- a/src/pages/mainPage/mainPage.css
+++ b/src/pages/mainPage/mainPage.css
@@ -1,3 +1,7 @@
+@import url('/src/styles/style.css');
+@import url('/src/styles/reset.css');
+@import url('/src/styles/base.css');
+
 h2 {
   font-family:
     'Pretendard Variable',
