--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -2,6 +2,17 @@
 @import url('/src/styles/reset.css');
 @import url('/src/styles/base.css');
 
+:root {
+  --default-font-weight: 400;
+  --bold-font-weight: 600;
+  --default-button-width: 20.8125rem;
+  --karly-color: #5f0080;
+  --default-height: 2.75rem;
+  --default-font-size: 1rem;
+  --default-width: 40rem;
+}
+
+
 body,
 button,
 .register input {
@@ -22,25 +33,25 @@ button,
     'Segoe UI Symbol',
     sans-serif;
 }
-section {
-  width: 640px;
+section, aside {
+  width: var(--default-width);
   margin: 0 auto;
 }
 
 h2 {
-  font-weight: 600;
+  font-weight: var(--bold-font-weight);
   font-size: 21.33px;
   line-height: 31.99px;
   text-align: center;
   padding: 80px 0px 40px 0px;
 }
 input-text-container, .register input, .gender-select {
-  width: 333px;
-  height: 44px;
+  width: var(--default-button-width);
+  height: var(--default-height);
 }
 .required-info {
   color: #333333;
-  font-weight: 600;
+  font-weight: var(--bold-font-weight);
   font-size: 12px;
   line-height: 18px;
   display: flex;
@@ -68,18 +79,18 @@ input-text-container, .register input, .gender-select {
   padding-left: 20px;
 }
 .register input::placeholder {
-  font-size: 16px;
-  font-weight: 400;
+  font-size: var(--default-font-size);
+  font-weight: var(--default-font-weight);
   color: #A6A6A6;
   line-height: 25.6px;
 }
 
 .register > span {
-  font-weight: 600;
-  font-size: 16px;
+  font-weight: var(--bold-font-weight);
+  font-size: var(--default-font-size);
   line-height: 24px;
   width: 139px;
-  height: 44px;
+  height: var(--default-height);
   padding: 4px;
   text-align: center;
   display: flex;
@@ -87,13 +98,13 @@ input-text-container, .register input, .gender-select {
 }
 button {
   width: 143px;
-  height: 44px;
-  color: #5f0080;
+  height: var(--default-height);
+  color: var(--karly-color);
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #5f0080;
-  font-weight: 600;
-  font-size: 16px;
+  border: 1px solid var(--karly-color);
+  font-weight: var(--bold-font-weight);
+  font-size: var(--default-font-size);
   line-height: 24px;
   cursor: pointer;
 }
@@ -101,10 +112,10 @@ button {
   margin-left: 8px;
 }
 button.address-search, .error{
-  width: 333px;
+  width: var(--default-button-width);
 }
 .address p {
-  font-weight: 400;
+  font-weight: var(--default-font-weight);
   font-size: 12px;
   line-height: 19.2px;
   margin-top: 3px;
@@ -132,21 +143,24 @@ input[type='radio'] {
 input[type='radio']:checked {
   border-radius: 50%;
   background-color: #c4c4c4;
-  border: 2px solid #5f0080;
+  border: 2px solid var(--karly-color);
 }
 .register-button {
   display: block;
   width: 340px;
   color: white;
-  background-color: #5f0080;
+  background-color: var(--karly-color);
   margin: 0 auto;
 }
 .register-button-wrapper {
+  width: var(--default-width);
+  margin: 0 auto;
   padding: 40px 0px 84px 0px;
+  border-top: 1px solid #c4c4c4;
 }
 .error {
   display: none;
-  width: 333px;
+  width: var(--default-button-width);
   margin: 0 auto;
   color: red;
   font-size: 15px;
@@ -162,4 +176,70 @@ input[type='radio']:checked {
 }
 #idField, #pwField, #pwConfirmField, #userName {
   box-sizing: border-box;
+}
+
+/* 이용약관동의 */
+.agreement-list {
+  box-sizing: border-box;
+  width: 429px;
+  height: 51px;
+  padding: 12px 0 12px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.agreement-main-text {
+  font-weight: var(--default-font-weight);
+  font-size: var(--default-font-size);
+  line-height: 25.6px;
+  position: relative;
+
+  input {
+    position: absolute;
+    left: 3px;
+    appearance: none;
+    width: 24px;
+    height: 24px; 
+    margin: 0;
+    justify-self: start;
+    align-self: center;
+  }
+  label{
+    background: url(/src/assets/images/unchecked.png) no-repeat 0 0 /contain;
+    padding: 3.5px 0 3.5px 32.5px;
+    white-space: nowrap;
+
+  }
+  input:checked + label{
+    background-image: url(/src/assets/images/checked.png);
+  } 
+}
+.agreement-more-info {
+  color: var(--karly-color);
+  font-size: 0.75rem;
+}
+.completeAgreement {
+  label {
+    font-weight: 700;
+  }
+}
+
+/* 이용약관동의 타이틀 */
+h3{
+  width: 139px;
+  height: var(--default-height);
+  padding: 4px;
+  font-weight: var(--bold-font-weight);
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+aside{
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 8px;
 }
