--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -2,15 +2,16 @@
   width: 1050px;
   margin: 0 auto;
 }
-.header {
+.header2 {
   width: 100%;
   height: 133px;
   text-align: center;
   line-height: 133px;
   font-size: 14px;
 }
-.header h2 {
+.header2 h2 {
   font-size: 28px;
+  font-weight: bold;
 }
 .main {
   display: flex;
