--- a/src/styles/product-slide.css
+++ b/src/styles/product-slide.css
@@ -18,7 +18,7 @@ body {
 }
 .product-slide-container {
   width: 1050px;
-  height: 516px;
+  /* height: 516px; */
 }
 .product-item {
   width: 249px;
