--- a/src/pages/productDetail/inquiry.css
+++ b/src/pages/productDetail/inquiry.css
@@ -39,7 +39,7 @@ body {
 
 #reviewForm {
     display: flex;
-    justify-content: center;
+    justify-content: center; /* 버튼을 중앙 정렬 */
     gap: 16px;
     margin-top: 16px; 
 	border-top: 2px solid #E1E1E1;
@@ -80,9 +80,9 @@ body {
     width: 100%;
     height: 100%;
     border: none;
-    resize: none; 
+    resize: none; /* 크기 조정 불가 */
     box-sizing: border-box;
-    padding: 4px; 
+    padding: 4px; /* 내부 여백 추가 */
     font-family: inherit;
     font-size: inherit;
 }
