--- a/src/pages/productList/productList.css
+++ b/src/pages/productList/productList.css
@@ -94,7 +94,13 @@ h2 {
 
 /* footer */
 .product-list-wrapper {
-  padding-bottom: 200px;
+  margin: 0;
+  padding: 0 0 200px 47px;
+  border: none;
+  background: none;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
 }
 
 summary::-webkit-details-marker {
@@ -103,10 +109,7 @@ summary::-webkit-details-marker {
 
 .accordion {
   width: var(--accordion-width);
-  position: absolute;
-  /* left: 18.75rem; */
-  left: 427px; 
-  top: 20.5rem; /*헤더 들어오면 다시 수정*/
+  padding-top: 8rem;
 }
 
 .accordion ul {
@@ -201,7 +204,8 @@ summary {
 }
 
 .container-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
   width: var(--default-width);
-  margin: 0 auto; /* 가운데 정렬 */
-  padding-left: 270px; /*오른쪽 이동*/
+  margin: 0 auto; 
 }
